# UnrealMCP

./: .gitignore  README.md  UnrealMCP.uplugin
Python/: .env.example  config.py  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  unreal_mcp_server_advanced.py
Python/helpers/: agent_memory.py  async_connection.py  auth_manager.py  blueprint_analysis.py  caching_layer.py  code_execution.py  lsystem_generator.py  mcp_resources.py  performance_monitor.py  wave_function_collapse.py
Python/ml/: __init__.py  mcp_rl_agent.py
Python/tests/: __init__.py  test_async_connection.py  test_caching.py
Source/UnrealMCP/: UnrealMCP.Build.cs
Source/UnrealMCP/Private/: EpicUnrealMCPBridge.cpp  MCPServerRunnable.cpp
Source/UnrealMCP/Private/Commands/: EpicUnrealMCPAICommands.cpp  EpicUnrealMCPBlueprintCommands.cpp  EpicUnrealMCPBlueprintGraphCommands.cpp  EpicUnrealMCPCommonUtils.cpp  EpicUnrealMCPMassCommands.cpp  EpicUnrealMCPStateTreeCommands.cpp
Source/UnrealMCP/Private/ML/: MCPMLBridge.cpp
Source/UnrealMCP/Private/Mass/: MCPMassAIProcessor.cpp
Source/UnrealMCP/Private/Tasks/: MCPGameplayTask_AIAction.cpp
Source/UnrealMCP/Public/: EpicUnrealMCPBridge.h
Source/UnrealMCP/Public/Commands/: EpicUnrealMCPAICommands.h  EpicUnrealMCPBlueprintCommands.h  EpicUnrealMCPBlueprintGraphCommands.h  EpicUnrealMCPCommonUtils.h  EpicUnrealMCPMassCommands.h  EpicUnrealMCPStateTreeCommands.h
Source/UnrealMCP/Public/ML/: MCPMLBridge.h
Source/UnrealMCP/Public/Mass/: MCPMassAIProcessor.h  MCPMassFragments.h
(+17 files in other folders)
